# module_say-hello

./: pyproject.toml
first_project/scripts/: say_hello.py
